--- a/src/main/webapp/WEB-INF/classes/loginportal.properties
+++ b/src/main/webapp/WEB-INF/classes/loginportal.properties
@@ -16,6 +16,8 @@
 # under the License.
 #
 
-authentication.do.url=authenticate.do
-common.auth.url=https://localhost:9443/commonauth
-auth.api.url=https://localhost:9443/api/identity/auth/v1.0/authenticate
+identity.server.url=https://localhost:9443
+
+authentication.do.ep=authenticate.do
+common.auth.ep=/commonauth
+auth.api.ep=/api/identity/auth/v1.0/authenticate
